# FastAPI

./: .env  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: main.py
