[tool.poetry]
name = "fastapi-backend-parfait"
version = "0.1.0"
description = "backend restAPI with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_backend_parfait"}]

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "0.0.6"
mysql-connector-python = "^8.0.28"  # Agrega esta línea con la versión adecuada

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"